# nanoNLA

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: TRAINING_NOTES.md  progressive_reader_v0_flat.yaml  progressive_reader_v0_progressive.yaml  progressive_reader_v0_smoke.yaml
docs/: progressive_reader_v0.md  qwen3_8b_run.md  train_new_model.md
evals/: README.md  __init__.py  base.py  registry.py  run_evals.py
launch/: clean_install.sh  compare_hf_vs_vllm_lens.py  compute_fve_baseline.py  convert_ar_dcp_to_hf.py  eval_av_val_loss.py  eval_post_rl.py  install_easysteer.sh  install_sglang.sh  install_vllm_lens.sh  install_vllm_lens_old.sh  install_vllm_lens_v2.sh  prep_val_split.py  prepare_critic.sh  run_ar_sft.sh  run_ar_sft_safe.sh  run_av_sft.sh  run_av_sft_baseline_train.sh  run_av_sft_karvonen.sh  run_datagen.sh  run_rl.sh  run_smoke.sh  run_stage2_ar_parallel.sh  sample_av_explanations.py  sbatch_ar_safe.sh  sbatch_ar_sft.sh  sbatch_av_baseline_fair.sh  sbatch_av_sft.sh  sbatch_av_sft_karvonen.sh  sbatch_compare_hf_vllm.sh  sbatch_datagen.sh  sbatch_eval_baseline_fair.sh  sbatch_eval_clean.sh  sbatch_eval_karvonen.sh  sbatch_eval_post_rl.sh  sbatch_eval_smoke.sh  sbatch_prepare_critic.sh  sbatch_rl.sh  sbatch_rl_long.sh  sbatch_rl_overnight.sh  sbatch_rl_smoke.sh  (+8 more)
lv/: .gitignore  CLAUDE.md  README.md  requirements-gpu.txt  requirements.txt
multilayer_nla/: DIAGNOSTICS.md  EXPERIMENT_REPORT.md  README.md  REBUILD_RUNBOOK.md  SWEEP_STATUS.md  __init__.py  analyze_sweep.py  build_datasets.py  build_from_published.py  build_sweep.py  datasets.py  (+22 more)
(+159 files in other folders)
